Fixes an issue with button rendering on ios

--- a/src/Lithnet.AccessManager/Lithnet.AccessManager.Service/wwwroot/css/site.css
+++ b/src/Lithnet.AccessManager/Lithnet.AccessManager.Service/wwwroot/css/site.css
@@ -548,3 +548,7 @@ body {
 .hidden {
     display: none;
 }
+
+.btn {
+    white-space: nowrap;
+}
